# clicker

./: .dockerignore  .gitignore  Dockerfile  README.md  client.py  main.py  pyproject.toml  server.py
clicker/: __init__.py  manager.py  protocol.py  sus.py  sus_client.py  sus_server.py  test_sus.py  util.py
clicker/client/: __init__.py  __main__.py  agent.py  client.py  clique.py  main.py  msgs.py  protocol.py  requirements.txt  schema.py  util.py
clicker/client/screens/: chat.py  inbox.py  login.py  settings.py
clicker/client/style/: cliq.tcss
clicker/common/: exceptions.py  util.py
clicker/server/: cliq.py  handler.py  manager.py  protocol.py  server.py
clicker/server/msg/: message.py
