[tool.poetry]
name = "clicker"
version = "0.1.0"
description = "Python client library for the Cliq protocol"
authors = ["romir kulshrestha <romir.kulshrestha@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
cryptography = "^41.0.5"
blake3 = "^0.3.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
