[project]
name = "clicker"
version = "0.1.0"
description = "Python client library for the Cliq protocol"
authors = ["romir kulshrestha <romir.kulshrestha@gmail.com>"]
readme = "README.md"
license = "MIT"

requires-python = ">=3.10"
dependencies = [
    "blake3",
    "cryptography"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
